--- a/vue-shop/package.json
+++ b/vue-shop/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "core-js": "^3.8.3",
     "router": "^2.2.0",
     "vue": "^3.2.13",
