--- a/vue-shop/package.json
+++ b/vue-shop/package.json
@@ -11,8 +11,11 @@
     "axios": "^1.10.0",
     "core-js": "^3.8.3",
     "router": "^2.2.0",
+    "store": "^2.0.12",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -34,7 +37,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "requireConfigFile": false
     },
     "rules": {}
   },
